--- a/SpringCore/NodoTraining/src/main/java/com/example/nodotraining/untitled/pom.xml
+++ b/SpringCore/NodoTraining/src/main/java/com/example/nodotraining/untitled/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>spring-context</artifactId>
       <version>4.3.3.RELEASE</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.0.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
